# thz-image-explorer

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  Cargo.toml  README.MD  build.rs  generate_psf.py  requirements.txt
.cargo/: config.toml
.github/workflows/: deployment.yml  paper.yml  rust.yml
assets/: Info.ext.plist  water_lines.csv
assets/DotTHzQLExtension.appex/Contents/: Info.plist
assets/DotTHzQLExtension.appex/Contents/MacOS/: DotTHzQLExtension  DotTHzQLExtension.debug.dylib  __preview.dylib
assets/DotTHzQLExtension.appex/Contents/Resources/: Info.plist  PreviewViewController.nib
assets/DotTHzQLExtension.appex/Contents/_CodeSignature/: CodeResources
assets/icons/: icon.xd
assets/shaders/: volume_shader.wgsl
cancellable_loops/: Cargo.toml
cancellable_loops/src/: lib.rs
doc/: paper.md
filter_macros/: Cargo.toml
filter_macros/src/: lib.rs
icons/: icon.xd
impl/filter_macros/: Cargo.toml
impl/filter_macros/src/: lib.rs
paper/: coconut_explore.graphml  paper.bib  paper.md  thz-image-explorer.drawio.xml
sample_data/: l_alanine_sample.thzimg  psf.npz  psf.npz.backup  reference.thz  resolution_target_sample.thz  test_npz_export.py
sample_data/example_beam_width/measurement_y/data/: 1750163177.929295_data.thz
sample_directory/: psf.npz
sample_directory/example_beam_width/measurement_x/data/: 1750085285.8557956_data.thz
sample_directory/psf_csv/x/: x=-10.00.csv  x=-10.10.csv  x=-10.20.csv  x=-10.30.csv  x=-10.40.csv  x=-10.50.csv  x=-10.60.csv  x=-10.70.csv  x=-10.80.csv  x=-10.90.csv  x=-11.00.csv  x=-11.10.csv  x=-11.20.csv  x=-11.30.csv  x=-11.40.csv  x=-11.50.csv  x=-11.60.csv  x=-11.70.csv  x=-11.80.csv  x=-11.90.csv  x=-12.00.csv  x=-12.10.csv  x=-12.20.csv  x=-12.30.csv  x=-12.40.csv  x=-12.50.csv  x=-12.60.csv  x=-12.70.csv  x=-12.80.csv  x=-12.90.csv  x=-13.00.csv  x=-13.10.csv  x=-13.20.csv  x=-13.30.csv  x=-13.40.csv  x=-13.50.csv  x=-13.60.csv  x=-13.70.csv  x=-13.80.csv  x=-13.90.csv  (+60 more)
sample_directory/psf_csv/y/: y=-0.10.csv  y=-0.20.csv  y=-0.30.csv  y=-0.40.csv  y=-0.50.csv  y=-0.60.csv  y=-0.70.csv  y=-0.80.csv  y=-0.90.csv  y=-1.00.csv  y=-1.10.csv  y=-1.20.csv  y=-1.30.csv  y=-1.40.csv  y=-1.50.csv  y=-1.60.csv  y=-1.70.csv  y=-1.80.csv  y=-1.90.csv  y=-2.00.csv  y=-2.10.csv  y=-2.20.csv  y=-2.30.csv  y=-2.40.csv  y=-2.50.csv  y=-2.60.csv  y=-2.70.csv  y=-2.80.csv  y=-2.90.csv  y=-3.00.csv  y=-3.10.csv  y=-3.20.csv  y=-3.30.csv  y=-3.40.csv  y=-3.50.csv  y=-3.60.csv  y=-3.70.csv  y=-3.80.csv  y=-3.90.csv  y=-4.00.csv  (+60 more)
scripts/: generate_psf.py  requirements.txt  roi_analysis.py
src/: cancellable_loops.rs  center_panel.rs  config.rs  data.rs  data_container.rs  data_thread.rs  double_slider.rs  gauge.rs  gui.rs  io.rs  left_panel.rs  macos_app_delegate.rs  main.rs  math_tools.rs  matrix_plot.rs  right_panel.rs  system_theme.rs  toggle.rs  update.rs
src/filters/: band_pass_fd.rs  band_pass_td_after_fft.rs  band_pass_td_before_fft.rs  deconvolution.rs  filter.rs  mod.rs  psf.rs  tilt_compensation.rs
src/gui/: application.rs  center_panel.rs  gauge_widget.rs  left_panel.rs  matrix_plot.rs  mod.rs  right_panel.rs  secondary_windows.rs  settings_window.rs  threed_plot.rs  toggle_widget.rs  utils.rs
src/gui/rendering/: renderer.rs
src/psf_tool/: app.rs  curve_fitting.rs  data_loader.rs  diagnostic_window.rs  diagnostics.rs  export.rs  filters.rs  fitting.rs  individual_fits_window.rs  mod.rs  psf.rs  psf_visualizer.rs  warnings.rs
wix/: main.wxs
