[package]
name = "thz-image-explorer"
authors = ["Linus Leo Stöckli"]
version = "0.2.2"
edition = "2021"
description = "Explorer Software for THz TDS images."
license = "GPL-3.0"

[dependencies]
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui-phosphor = "0.9.0"
egui_plot = "0.31"
egui_logger = { git = "https://github.com/hacknus/egui_logger" }
egui-theme-switch = { git = "https://github.com/hacknus/egui-theme-switch" }
egui-file-dialog = { git = "https://github.com/hacknus/egui-file-dialog", branch = "sort_by_metadata", features = ["information_view"] }
egui_double_slider = "0.7.0"
bevy_egui = { version = "0.34", features = ["serde"] }
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "dds",
    "jpeg",
    "ktx2",
    "zstd",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
] }
bevy_voxel_plot = { git = "https://github.com/hacknus/bevy_voxel_plot" }
bevy_panorbit_camera = { version = "0.26" }
crossbeam-channel = "0.5"
log = "0.4.22"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "gif", "png", "tiff", "rayon"] }
itertools-num = "0.1"
realfft = "3.4.0"
preferences = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-npy = { version = "0.9.1", features = ["npz"] }
ndarray-stats = "0.6.0"
ndarray-ndimage = { git = "https://github.com/hacknus/ndarray-ndimage" }
statrs = "0.18.0"
serde_json = "1.0.95"
itertools = "0.14.0"
dotthz = { version = "0.2", features = ["serde", "hdf5-sys-static"] }
home = "0.5.11"
self_update = { git = "https://github.com/hacknus/self_update", features = ["archive-zip", "compression-zip-deflate"], optional = true }
tempfile = { version = "3.15", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "http2"], optional = true }
semver = { version = "1.0.24", optional = true }
glob = "0.3.2"
filter_macros = { path = "filter_macros" }
ctor = "0.4"
once_cell = "1.21"
rayon = "1.10.0"
rustfft = "6.2.0"
num-complex = "0.4"
interp1d = "0.2.0"
chrono = "0.4"

[features]
default = ["self_update"]
self_update = ["dep:self_update", "tempfile", "reqwest", "semver"]

[package.metadata.bundle]
name = "THz Image Explorer"
identifier = "ch.unibe.thzimageexplorer"
icon = ["./icons/install.png"]
copyright = "Copyright (c) 2025, University of Bern, Space Research & Planetary Sciences, Linus Leo Stöckli."
category = "Developer Tool"
short_description = "Explorer Software for THz time domain images."
long_description = "THz Image Explorer is an application for THz time-domain images, developed by the Planetary Imaging Group of the Space Science and Planetology Division at the University of Bern, Switzerland."
license = "GPL-3.0"
osx_minimum_system_version = "10.12"
osx_url_schemes = ["ch.unibe.thzimageexplorer"]
deb_depends = ["libclang-dev", "libgtk-3-dev", "libxcb-render0-dev", "libxcb-shape0-dev", "libxcb-xfixes0-dev", "libxkbcommon-dev", "libssl-dev"]
osx_info_plist_exts = ["assets/Info.ext.plist"]
osx_plugins = ["assets/DotTHzQLExtension.appex"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "THz Image Explorer"
no-build = false
output = "target/wix/THzImageExplorerInstaller.msi"

[profile.release]
debug = 1
opt-level = 3

[workspace]
resolver = "2"
