[package]
name = "thz-image-explorer"
authors = ["Linus Leo Stöckli"]
version = "0.4.0"
edition = "2021"
description = "Explorer Software for THz TDS images."
license = "GPL-3.0"

[dependencies]
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui-phosphor = "0.9.0"
egui_plot = "0.32"
egui_logger = { git = "https://github.com/hacknus/egui_logger", branch = "expose_logs" }
egui-theme-switch = { git = "https://github.com/hacknus/egui-theme-switch" }
egui-circular-progress-bar = { git = "https://github.com/hacknus/egui-circular-progress-bar" }
egui_double_slider = "0.8.0"
bevy_egui = { version = "0.35.0", features = ["serde"] }
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_input_focus",
    "bevy_log",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "png",
    "dds",
    "jpeg",
    "ktx2",
    "zstd",
    "sysinfo_plugin",
    "x11",
] }
bevy_voxel_plot = { git = "https://github.com/hacknus/bevy_voxel_plot" }
bevy_panorbit_camera = { version = "0.27" }
bevy_framepace = "0.19.1"
crossbeam-channel = "0.5"
log = "0.4.22"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "gif", "png", "tiff", "rayon"] }
realfft = "3.4.0"
preferences = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-npy = { version = "0.9.1", features = ["npz"] }
dotthz = { version = "0.2", features = ["serde", "hdf5-sys-static"] }
home = "0.5.11"
self_update = { git = "https://github.com/hacknus/self_update", features = ["archive-zip", "compression-zip-deflate"], optional = true }
tempfile = { version = "3.15", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "http2"], optional = true }
semver = { version = "1.0.24", optional = true }
filter_macros = { path = "filter_macros" }
cancellable_loops = { path = "cancellable_loops" }
ctor = "0.4"
once_cell = "1.21"
rayon = "1.10.0"
rustfft = "6.2.0"
num-complex = "0.4"
interp1d = "0.2.0"
chrono = "0.4"
num-traits = "0.2.19"
uuid = "1.17.0"
downcast-rs = "2.0.1"
vtkio = "0.7.0-rc1"

[target.'cfg(target_os = "macos")'.dependencies]
rfd = "0.15"
futures = "0.3.31"

[features]
default = ["self_update"]
self_update = ["dep:self_update", "tempfile", "reqwest", "semver"]

[package.metadata]
msrv = "1.87"

[package.metadata.bundle]
name = "THz Image Explorer"
identifier = "ch.unibe.thzimageexplorer"
icon = ["assets/icons/install.png"]
copyright = "Copyright (c) 2025, University of Bern, Space Research & Planetary Sciences, Linus Leo Stöckli."
category = "Developer Tool"
short_description = "Explorer Software for THz time domain images."
long_description = "THz Image Explorer is an application for THz time-domain image analysis, developed by the Planetary Imaging Group of the Space Science and Planetology Division at the University of Bern, Switzerland."
license = "GPL-3.0"
osx_minimum_system_version = "10.12"
osx_url_schemes = ["ch.unibe.thzimageexplorer"]
deb_depends = ["libclang-dev", "libgtk-3-dev", "libxcb-render0-dev", "libxcb-shape0-dev", "libxcb-xfixes0-dev", "libxkbcommon-dev", "libssl-dev"]
osx_info_plist_exts = ["assets/Info.ext.plist"]
osx_plugins = ["assets/DotTHzQLExtension.appex"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "THz Image Explorer"
product-name = "THz Image Explorer"
no-build = false
output = "target/wix/THzImageExplorerInstaller.msi"
product-icon = "assets/icons/icon.ico"

[profile.release]
debug = 1
opt-level = 3

[workspace]
resolver = "2"
members = ["cancellable_loops", "filter_macros"]
