[package]
name = "thz-image-explorer"
authors = ["Linus Leo Stöckli"]
version = "1.1.0"
edition = "2021"
description = "Explorer Software for THz TDS images."
license = "GPL-3.0"

[dependencies]
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui-phosphor = "0.11"
egui_plot = "0.34"
egui_logger = { git = "https://github.com/hacknus/egui_logger", branch = "expose_logs_0.33" }
egui-theme-switch = "0.5"
egui-circular-progress-bar = "0.3"
egui_double_slider = "1.0"
bevy_egui = { version = "0.38", features = ["serde"] }
bevy = { version = "0.17", default-features = false, features = [
    "std",
    "async_executor",
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_input_focus",
    "bevy_log",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "multi_threaded",
    "png",
    "dds",
    "jpeg",
    "ktx2",
    "zstd_c",
    "sysinfo_plugin",
    "x11",
] }
bevy_voxel_plot = "3.0"
bevy_panorbit_camera = { version = "0.33" }
bevy_framepace = "0.20"
crossbeam-channel = "0.5"
log = "0.4.22"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "gif", "png", "tiff", "rayon"] }
realfft = "3.5"
preferences = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.17", features = ["rayon", "serde"] }
ndarray-npy = { git = "https://github.com/jturner314/ndarray-npy", features = ["npz"] }
dotthz = { version = "0.3", features = ["serde", "hdf5-sys-static"] }
home = "0.5"
self_update = { git = "https://github.com/hacknus/self_update", features = ["archive-zip", "compression-zip-deflate"], optional = true }
tempfile = { version = "3.23", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "http2"], optional = true }
semver = { version = "1.0", optional = true }
filter_macros = { path = "filter_macros" }
cancellable_loops = { path = "cancellable_loops" }
ctor = "0.6"
once_cell = "1.21"
rayon = "1.11"
rustfft = "6.4"
num-complex = "0.4"
interp1d = "0.2"
chrono = "0.4"
num-traits = "0.2"
uuid = "1.18"
downcast-rs = "2.0"
vtkio = "0.7.0-rc1"

[dev-dependencies]
approx = "0.5.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
egui-file-dialog = { git = "https://github.com/hacknus/egui-file-dialog", branch = "sort_by_metadata", features = ["information_view"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = "0.16"
futures = "0.3.31"

[features]
default = ["self_update"]
self_update = ["dep:self_update", "tempfile", "reqwest", "semver"]

[package.metadata]
msrv = "1.87"

[package.metadata.bundle]
name = "THz Image Explorer"
identifier = "ch.unibe.thzimageexplorer"
icon = ["assets/icons/install.png"]
copyright = "Copyright (c) 2025, University of Bern, Space Research & Planetary Sciences, Linus Leo Stöckli."
category = "Developer Tool"
short_description = "Explorer Software for THz time domain images."
long_description = "THz Image Explorer is an application for THz time-domain image analysis, developed by the Planetary Imaging Group of the Space Science and Planetology Division at the University of Bern, Switzerland."
license = "GPL-3.0"
osx_minimum_system_version = "10.12"
osx_url_schemes = ["ch.unibe.thzimageexplorer"]
deb_depends = ["libclang-dev", "libgtk-3-dev", "libxcb-render0-dev", "libxcb-shape0-dev", "libxcb-xfixes0-dev", "libxkbcommon-dev", "libssl-dev"]
osx_info_plist_exts = ["assets/Info.ext.plist"]
osx_plugins = ["assets/DotTHzQLExtension.appex"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "THz Image Explorer"
product-name = "THz Image Explorer"
no-build = false
output = "target/wix/THzImageExplorerInstaller.msi"
product-icon = "assets/icons/icon.ico"

[profile.release]
debug = 1
opt-level = 3

[workspace]
resolver = "2"
members = ["cancellable_loops", "filter_macros"]
